[package]
name = "cf-route-services"
version = "0.1.0"
edition = "2021"

[lib]
path = "./src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
axum = { version = "0.5.16", features = ["headers"] }
axum-client-ip = "0.2.0"
cf-env = "0.1.8"
dotenvy = "0.15.5"
headers = "0.3.8"
http = "0.2.8"
http-body = "0.4.5"
hyper-reverse-proxy = { git = "https://github.com/somehowchris/hyper-reverse-proxy.git", branch="feature/static-client" }
lazy_static = "1.4.0"
serde = "1.0.145"
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["signal", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["tracing", "trace", "request-id","compression-br", "compression-deflate", "compression-gzip"] }
tracing = "0.1.36"
uuid = { version = "1.3.0", features = ["v4"] }
hyper-trust-dns = { version = "0.5.0", features = [
  "rustls-http2",
  "dnssec-ring",
  "dns-over-https-rustls",
  "rustls-webpki",
] }
hyper = { version = "0.14.20", features = ["full"] }


[features]
http2 = ["axum/http2"]

[dev-dependencies]
tokio = { version = "1.26.0", features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3.15", features = [
    "env-filter",
    "std",
    "registry",
    "fmt",
    "json"
] }
