[package]
name = "cf-route-services"
version = "0.1.0"
edition = "2021"

[lib]
path = "./src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
axum = { version = "0.6.18", features = ["headers"] }
axum-client-ip = "0.4.1"
cf-env = "0.1.8"
dotenvy = "0.15.7"
headers = "0.3.8"
http = "0.2.9"
http-body = "0.4.5"
hyper-reverse-proxy = { git = "https://github.com/somehowchris/hyper-reverse-proxy.git", branch="feature/static-client" }
lazy_static = "1.4.0"
serde = "1.0.162"
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["signal", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["tracing", "trace", "request-id","compression-br", "compression-deflate", "compression-gzip"] }
tracing = "0.1.37"
uuid = { version = "1.3.2", features = ["v4"] }
hyper-trust-dns = { version = "0.5.0", features = [
  "rustls-http2",
  "dnssec-ring",
  "dns-over-https-rustls",
  "rustls-webpki",
] }
hyper = { version = "0.14.26", features = ["full"] }


[features]
http2 = ["axum/http2"]

[dev-dependencies]
tokio = { version = "1.28.0", features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "std",
    "registry",
    "fmt",
    "json"
] }
